<resources>
    <string name="app_name">BLE Communicator</string>
    <!--
    <string name="central_title">Central</string>
     -->
    <string name="central_title">接続リスト</string>
    <string name="peripheral_title">Peripheral</string>
    <!--
    <string name="central_button_title">Central</string>
     -->
    <string name="central_button_title">接続設定</string>
    <string name="peripheral_button_title">Peripheral</string>
    <string name="advertise_button_title">Start advertise</string>
    <string name="advertise_stop_button_title">Stop advertise</string>
<!--
    <string name="scan">ReScan</string>
    <string name="sort">Sort</string>
-->
    <string name="scan">検索</string>
    <string name="sort">並び替え</string>

    <string name="service_uuid">Service uuid:</string>
    <string name="address">BD Address</string>
    <string name="rssi">RSSI</string>

    <string name="read_data">Read Data</string>
    <string name="no_data">no Data</string>

    <string name="read_number_data">受信回数</string>
    <string name="read_measure_point_data">測定箇所</string>
    <string name="read_o2_data">酸素濃度</string>
    <string name="read_lel_data">可燃性ガス濃度</string>
    <string name="read_co_data">一酸化炭素濃度</string>
    <string name="read_h2s_data">硫化水素濃度</string>
    <string name="read_temperature_data">温度</string>
    <string name="read_humidity_data">湿度</string>
    <string name="read_Separation_data">区切りデータ</string>
    <string name="read_latitude_data">緯度</string>
    <string name="read_longitude_data">経度</string>



    <!--
        <string name="disconnect">Disconnect</string>
    -->
    <string name="disconnect">切断</string>

    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="notify">Notify</string>
    <string name="error_scan">failed to scan</string>
    <string name="error_start_to_scan">can not start to scan</string>
    <string name="connect_again">try to connect again</string>
    <string name="disconnected">disconnected from peripheral</string>
    <string name="advertise_service_uuid_title">Advertise service UUID</string>
    <string name="service_uuid_title">Service UUID</string>
    <string name="characteristic_uuid_title">Characteristic UUIDs</string>
    <string name="characteristic_read">read</string>
    <string name="characteristic_write">write</string>
    <string name="characteristic_notify">notify</string>
</resources>
