<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel" type="asia.groovelab.blecommunicator.viewmodel.CentralPeripheralViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CentralPeripheralActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:titleTextColor="@android:color/white"
            app:title="@{viewModel.appTitle}" />

        <TextView
            android:id="@+id/address_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toTopOf="@id/rssi_text_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/address" />

        <TextView
            android:id="@+id/address_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@id/address_text_title"
            app:layout_constraintLeft_toRightOf="@id/read_lel_data_text_title"
            tools:text="AA:BB:CC:DD:EE:FF"
            bind:text="@{viewModel.address}" />

        <TextView
            android:id="@+id/rssi_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/address_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/rssi" />

        <TextView
            android:id="@+id/rssi_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/rssi_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="-30dbm"
            bind:text="@{viewModel.rssi}" />

        <TextView
            android:id="@+id/read_text_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rssi_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_number_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_data" />

        <TextView
            android:id="@+id/read_text_view"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="1,2,3,4,5"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_number_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_measure_point_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_number_data" />

        <TextView
            android:id="@+id/read_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_number_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="999"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_measure_point_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_number_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_o2_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_measure_point_data" />

        <TextView
            android:id="@+id/read_measure_point_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_measure_point_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="1"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_o2_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_measure_point_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_lel_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_o2_data" />

        <TextView
            android:id="@+id/read_o2_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_o2_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="20.9"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_lel_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_o2_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_co_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_lel_data" />

        <TextView
            android:id="@+id/read_lel_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_lel_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="0"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_co_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_lel_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_h2s_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_co_data" />

        <TextView
            android:id="@+id/read_co_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_co_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="0"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_h2s_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_co_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_temperature_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_h2s_data" />

        <TextView
            android:id="@+id/read_h2s_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_h2s_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="0.0"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_temperature_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_h2s_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_humidity_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_temperature_data" />

        <TextView
            android:id="@+id/read_temperature_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_temperature_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="25"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_humidity_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_temperature_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_Separation_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_humidity_data" />

        <TextView
            android:id="@+id/read_humidity_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_humidity_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="50"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_Separation_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_humidity_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_latitude_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_Separation_data" />

        <TextView
            android:id="@+id/read_Separation_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_Separation_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="99"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_latitude_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_Separation_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/read_longitude_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_latitude_data" />

        <TextView
            android:id="@+id/read_latitude_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_latitude_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="35.39"
            android:text="@string/no_data" />

        <TextView
            android:id="@+id/read_longitude_data_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/read_latitude_data_text_title"
            app:layout_constraintBottom_toTopOf="@id/list_view"
            app:layout_constraintLeft_toLeftOf="@id/address_text_title"
            android:text="@string/read_longitude_data" />

        <TextView
            android:id="@+id/read_longitude_data_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/read_longitude_data_text_title"
            app:layout_constraintLeft_toLeftOf="@id/address_text_view"
            tools:text="139.44"
            android:text="@string/no_data" />

        <ExpandableListView
            android:id="@+id/list_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:groupIndicator="@null"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/read_longitude_data_text_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            bind:items="@{viewModel.items}"
            bind:sections="@{viewModel.sections}" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="@{viewModel.progressBarVisibility}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>